--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -5,7 +5,9 @@
   <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %><br>
 
   <%= f.label "Or Create New Ingredient:" %><BR>
-  <%= f.fields_for(:ingredient, Ingredient.new) do |ingredient_fields| %>
+
+ <%= f.fields_for @recipe.ingredients.build do |ingredient_fields| %>
+
     <%= ingredient_fields.text_field :name %>
     <% end %>
 
