--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -3,3 +3,5 @@
 <%= render partial: 'form', locals: {ingredient: @ingredient} %>
 <BR>
 <%= link_to 'All Ingredients', ingredients_path %>
+<BR><BR>
+<%= link_to 'All Recipes', recipes_path %>
