--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,4 +8,6 @@
 </li>
 <% end %>
 </ol>
-<%= link_to 'Create a new recipe', new_recipe_path %>
+<BR>
+<%= link_to 'Create a new recipe', new_recipe_path %><BR><BR>
+<%= link_to 'All Ingredients', ingredients_path %>
