--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,3 +1,6 @@
 <h1>Edit Ingredients Here </h1>
 
 <%= render partial: 'form', locals: {ingredient: @ingredient} %>
+<BR><BR>
+  <%= link_to 'All Ingredients', ingredients_path %>
+<%= link_to 'All Recipes', recipes_path %>
