--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,14 +2,16 @@
   <h3><%= f.label :name %>
   <%= f.text_field :name %> </h3>
 
-  <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %><br>
 
-  <%= f.label "Or Create New Ingredient:" %><BR>
 
- <%= f.fields_for @recipe.ingredients.build do |ingredient_fields| %>
+<h3> <%= f.label "Or Create New Ingredients:" %></h3>
 
-    <%= ingredient_fields.text_field :name %>
+    <%= f.fields_for :ingredients, @recipe.ingredients.build do |ingredient_form| %>
+       <%= ingredient_form.label :name %><br>
+       <%= ingredient_form.text_field :name %><br>
+       <%= f.label :ingredients %>
+       <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name %><br>
     <% end %>
-
+<BR><BR>
     <%= f.submit %>
   <% end %>
